--- a/src/Styles/Main.css
+++ b/src/Styles/Main.css
@@ -34,7 +34,7 @@ p {
     height: 40px;
     font-family: 'Karla';
 }
-button {
+ main button {
     width: 160px;
     height: 40px;
     font-size: 16px;
